<resources>

    <string name="login_navigation_title">Вход</string>
    <string name="map_navigation_title">На карте</string>
    <string name="news_navigation_title">Новости</string>
    <string name="number">Номер</string>
    <string name="sign_in">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="terms_of_use"><u>Пользовательским соглашением</u></string>
    <string name="registration">Регистрация</string>
    <string name="registration_info_message">Чтобы зарегистрироваться, вам придеться пройти идентификацию. От граждан Кыргызкой Республики, потребуется лишь паспорт. \n\nДля иностранных граждан должны будут пройти идентификацию в офисах обслуживания.</string>
    <string name="registration_info_message_2">Нажимая “Подать заявку”, вы потвеждаете: \n• Свое <u>согласие на сбор, обработку, хранения и передачу персональных данных</u>\n• Что не являетесь публичным должностным лицом \n• Что не имеете бенефициарного владельца</string>
    <string name="registration_apply">Подать заявку</string>
    <string name="som"><u>с</u></string>
    <string name="user_name_title">Укажите ФИО</string>
    <string name="surname">Фамилия</string>
    <string name="surname_input_hint">Введите фамилию</string>
    <string name="middle_name_input_hint">Введите отчество</string>
    <string name="name_input_hint">Введите имя</string>
    <string name="name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="date_birth">Дата рождения</string>
    <string name="date_birth_hint">Выбрать дату</string>
    <string name="user_citizenship_title">Укажите являетесь ли вы гражданином Кыргызкой Республики</string>
    <string name="iam_citizen_kyrgyzstan">Я гражданин Кыргызстана</string>
    <string name="iam_not_citizen_kyrgyzstan">Я гражданин Другой страны</string>
    <string name="next_button">Далее</string>
    <string name="passport_data_title">Укажите паспортные данные</string>
    <string name="document_name_title">Наименование документа</string>
    <string name="passport_number_title">Серия и номер паспорта</string>
    <string name="pin_title">ПИН</string>
    <string name="date_of_issue">Дата выдачи</string>
    <string name="expiration_date">Дата окончания</string>
    <string name="who_issued_document">Кем выдан документ</string>
    <string name="document_seria">Серия документа</string>
    <string name="document_number">Номер документа</string>
    <string name="passport_photo_title">Фото вашего паспорта</string>
    <string name="passport_photo_description">Убедитесь, что данные легко читаются и отчетливо видны в указанных пределах</string>
    <string name="selfie_title">Приготовьтесь к селфи с паспортом</string>
    <string name="selfie_instruction">Во время записи прочитайте все слова на экрана, держа паспорт перед собой. После завершения можно остановить запись самостоятельно.</string>
    <string name="selfie_start_camera">Начать снимать</string>
    <string name="user_address_title">Укажите место фактического проживания</string>
    <string name="region_title">Область</string>
    <string name="district_title">Район</string>
    <string name="city_title">Город</string>
    <string name="street_name">Названия улицы</string>
    <string name="house_number">Номер дома</string>
    <string name="apartment_number">Номер квартиры</string>
    <string name="country">Страна</string>
    <string name="enter_data">Укажите данные</string>
    <string name="enter_secret_word">Введите секретное слово</string>
    <string name="filter">Фильтры</string>
    <string name="maps">Карта</string>
    <string name="list">Список</string>
    <string name="api_key">AIzaSyAACmBp7mn0_8_hsnZza1Gauv4JVe14WDY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Services">Услуги</string>
    <string name="history_title">История</string>
    <string name="no_operation">Нет операции</string>
    <string name="history_empty_message">Чтобы оставить след в истории, оплатите что-нибудь - все платежи сохраняться здесь</string>
    <string name="useful">Полезное</string>
    <string name="all">Все</string>
    <string name="my_templates">Мои шаблоны</string>
    <string name="dark_theme">Темная тема</string>
    <string name="balls">Баллы</string>
    <string name="templates_menu_add">Add</string>
    <string name="enter_name">Введите название</string>
    <string name="txt_create_name">Название платежа</string>
    <string name="create_templates">Создать шаблон</string>
    <string name="choose_service">Выбрать услугу</string>
    <string name="personal_account">Лицевой счёт</string>
    <string name="xxxx_xxxx_xxxx">XXXXXXXXXXXX</string>
    <string name="sum">Сумма</string>
    <string name="sum_zero">00.00</string>
    <string name="create">Создать</string>
    <string name="category_services">Категории услуги</string>
    <string name="edit">Edit</string>
    <string name="edit_templates">Изменить шаблон</string>
    <string name="button_edit">Сохранить измения</string>
    <string name="xxxx_xxxx_xxxx_xxxx">XXXXXXXXXXXXXXXX</string>
    <string name="success_send">Успешно отправлено!</string>
    <string name="share">Share</string>
    <string name="info">г.Бишкек, Ауэзова 1/2 \nТел.: +996 (312) 637738 \nФакс: +996 (312) 637738 \nE-mail: support@ipc.kg \nСайт: www.ipc.kg"</string>
    <string name="_720083">ЗАО Межбанковский процессинговый центр 720083, Кыргызская Республика</string>
    <string name="qr_code">Это ваш персональный QR-код.<br />Используйте его для принятие средств</string>
    <string name="format_dd_MMMM_yyyy">dd MMMM yyyy</string>
    <string name="password">Пароль</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="enter_password">Введите пароль</string>
    <string name="ent_name">Введите имя</string>
    <string name="summ">Сумма</string>
    <string name="close">Закрыть</string>
    <string name="pay">Оплатить</string>
    <string name="check_internet">Проверьте соединение с интернетом</string>
</resources>