<?xml version="1.0" encoding="utf-8"?>


<layout>


    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.registration.fragment.UserCitizenshipFragment">

        <TextView
            android:id="@+id/user_citizenship_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="18dp"
            android:text="@string/user_citizenship_title"
            android:textColor="?attr/titleTextColor"
            android:textAppearance="@style/Black_Bold_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_citizenship_title">

            <RadioButton
                android:id="@+id/citizen_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iam_citizen_kyrgyzstan"
                android:textColor="?attr/titleTextColor"/>


            <RadioButton
                android:id="@+id/not_citizen_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iam_not_citizen_kyrgyzstan"
                android:textColor="?attr/titleTextColor"/>

        </RadioGroup>


        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_active_button"
            android:textColor="@color/buttonActiveTextColor"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:text="@string/next_button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
