<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.registration.activity.RegistrationStartActivity">


    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include
            android:id="@+id/toolbarPartners"
            layout="@layout/toolbar_back"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbarPartners"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/Black_Bold_18"
            android:text="@string/registration"
            />


        <TextView
            android:id="@+id/registration_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:textAppearance="@style/SubTitleTextStyle"
            android:text="@string/registration_info_message"
            android:lineSpacingExtra="5dp"
            />


        <TextView
            android:id="@+id/registration_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/registration_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:textAppearance="@style/DescriptionTextStyle"
            android:text="@string/registration_info_message_2"
            android:lineSpacingExtra="5dp"
            />


        <Button
            android:id="@+id/registration_start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_active_button"
            android:textAppearance="@style/ActiveButtonTextStyle"
            android:text="@string/registration_apply"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
