<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.registration.fragment.UserNameFragment">


    <data>


    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/user_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18sp"
                    android:layout_marginTop="20dp"
                    android:text="@string/user_name_title"
                    android:textAppearance="@style/Black_Bold_20"
                    android:textColor="?attr/titleTextColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:id="@+id/surname_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="18dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_name_title">

                    <TextView
                        android:id="@+id/surname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/surname"
                        android:textAppearance="@style/LightGray_Regular_12"
                        android:textColor="?attr/titleTextColor" />


                    <EditText
                        android:id="@+id/surname_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edt_active"
                        android:hint="@string/surname_input_hint"
                        android:inputType="text"
                        android:paddingStart="16dp"
                        android:paddingTop="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="16dp"
                        android:textAppearance="@style/LightGray_Regular_16"
                        android:textColor="?attr/titleTextColor"
                        android:textColorHint="@color/colorHint" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="18dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/surname_layout">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textAppearance="@style/LightGray_Regular_12"
                        android:textColor="?attr/titleTextColor" />


                    <EditText
                        android:id="@+id/name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edt_active"
                        android:hint="@string/name_input_hint"
                        android:inputType="text"
                        android:padding="16dp"
                        android:textAppearance="@style/LightGray_Regular_16"
                        android:textColor="?attr/titleTextColor"
                        android:textColorHint="@color/colorHint"

                        />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/middle_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="18dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_layout">

                    <TextView
                        android:id="@+id/middle_name_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/middle_name"
                        android:textAppearance="@style/LightGray_Regular_12"
                        android:textColor="?attr/titleTextColor" />


                    <EditText
                        android:id="@+id/middle_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edt_active"
                        android:hint="@string/middle_name_input_hint"
                        android:inputType="text"
                        android:padding="16dp"
                        android:textAppearance="@style/LightGray_Regular_16"
                        android:textColor="?attr/titleTextColor"
                        android:textColorHint="@color/colorHint" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/ubuntu_medium"
                        android:inputType="text"
                        android:text="При наличии паспорта"
                        android:textSize="12sp"
                        android:textAppearance="@style/SubTitleTextStyle"
                        android:textColor="?attr/subTitleTextColor" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/date_birth_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/middle_name_layout">

                    <TextView
                        android:id="@+id/date_birth_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_birth"
                        android:textAppearance="@style/LightGray_Regular_12"
                        android:textColor="?attr/titleTextColor" />


                    <TextView
                        android:id="@+id/date_birth_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edt_active"
                        android:clickable="false"
                        android:drawablePadding="2dp"
                        android:hint="@string/date_birth_hint"
                        android:padding="16dp"
                        android:textAppearance="@style/LightGray_Regular_16"
                        android:textColor="?attr/titleTextColor"
                        android:textColorHint="@color/colorHint"
                        app:drawableEndCompat="@drawable/ic_select_date" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_in_active_button"
            android:textColor="@color/buttonInActiveTextColor"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:text="Далее"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
